wikijs/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-postgres
  namespace: wikijs
spec:
  selector: { app: wikijs-postgres }
  ports:
    - port: 5432
      targetPort: 5432
